tests/mm0_mmu/fail/bad-sort21.mmu
-- strict should be after pure
(sort s21 strict pure)